--- a/src/jsondata/projectData.json
+++ b/src/jsondata/projectData.json
@@ -25,7 +25,7 @@
         "description": "Python program to simulate large scale virus infection",
             "link":"https://github.com/Freskoko/VirusSimulationOOP",
             "time":"PERSONAL PROJECT",
-          "thing1":"Simuation that allows for multiple adjustable parameters"
+          "thing1":"Simulation that allows for multiple adjustable parameters"
       }
 
 }
